# build-my-agent

./: .gitignore  AGENTS.md  CLAUDE.md  EVAL_GUIDE.md  PHASE4_REVIEW.md  README.md  TODO.md  apply_investment_optimization.sh  promptfooconfig-benchmarks.yaml  promptfooconfig.yaml  pyproject.toml  smoke-benchmarks.yaml  test_python_behavior.py
.kimi/skills/investment-skill/: AGENTS.md  ALERTS_GUIDE.md  DEPLOYMENT_SUMMARY.md  DUAL_ALERT_SYSTEM.md  HISTORICAL_PATTERNS_UPGRADE.md  INDICATORS_COMPLETE_LIST.md  LEADING_INDICATOR_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_LEADING_INDICATOR.md  SKILL.md  SKILL.md.backup.20260311_2312  UPGRADE_COMPLETE_v2.0.md  UV_GUIDE.md  __main__.py  backtest_results.json  demo_dual_alerts.py  optimized_thresholds.json  pyproject.toml  requirements.txt  run.sh  test.py
.kimi/skills/investment-skill/collectors/: akshare_collector.py  akshare_collector_enhanced.py  eastmoney_collector.py  fast_collector.py  hybrid_collector.py  macro_collector.py  yahoo_collector.py
.kimi/skills/investment-skill/config/: portfolio.yaml  sources.yaml
.kimi/skills/investment-skill/evals/: evals.json
.kimi/skills/investment-skill/references/: schemas.md
.kimi/skills/investment-skill/scripts/: benchmark.py  generate_executive_summary.py  run_all_monitors.py  run_tests.py
.kimi/skills/investment-skill/skills/china_market_monitor/: __init__.py
.kimi/skills/investment-skill/skills/daily_summary/: __init__.py
.kimi/skills/investment-skill/skills/fund_monitor/: __init__.py  __init__.py.optimized
.kimi/skills/investment-skill/skills/leading_indicator_alerts/: __init__.py  backtest.py  enhanced_backtest.py  historical_patterns.py  threshold_optimizer.py
.kimi/skills/investment-skill/skills/macro_liquidity/: __init__.py
.kimi/skills/investment-skill/skills/realtime_alerts/: __init__.py
.kimi/skills/investment-skill/skills/semiconductor_tracker/: __init__.py
.kimi/skills/investment-skill/utils/: data_cache.py  vault_writer.py
docs/: agent-memory-deep-research.md  deep-research-report.md  harness-design-philosophy.md  memory-deep-research-report.md  sandbox-deep-research-report.md
evals/: INVESTMENT_SKILL_INTEGRATION.md  INVESTMENT_SKILL_OPTIMIZATION_PATCH.md  INVESTMENT_SKILL_PERFORMANCE_ANALYSIS.md  README.md  SECURITY_REPORT.md  config.toml  llm_judge.py  memory_cue_retrieval_provider.py  memory_retrieval_provider.py  metrics.py  promptfoo_artifact_provider.py  promptfoo_provider.py  query_result.py  reporter.py  runner.py  security_reporter.py  trigger_eval.py  validate.py
scripts/: backfill_memory_cues.py
tests/: __init__.py  test_access_controller.py  test_agent_error_policy.py  test_agent_execute_tools_queue.py  test_agent_max_rounds.py  test_agent_permission_runtime.py  test_agent_retry_limiter.py  test_agent_security_integration.py  test_agent_streaming.py  test_agent_system_prompt.py  test_agent_tool_discovery.py  test_audit.py  test_benchmark_loaders.py  test_capabilities.py  test_cli_sessions.py  test_compression.py  test_config.py  test_credential.py  test_credential_proxy.py  test_debug_logging.py  test_eval_runner_extensions.py  test_integration.py  test_is_readonly_bash.py  test_llm.py  test_llm_streaming.py  test_mcp_config.py  test_mcp_connector.py  test_mcp_manager.py  test_mcp_sync_runtime.py  test_memory_agent_integration.py  test_memory_audit.py  test_memory_compact.py  test_memory_config.py  test_memory_cue_backfill.py  test_memory_cue_backfill_script.py  test_memory_cue_engine.py  test_memory_cue_eval.py  test_memory_cue_models.py  test_memory_cue_query.py  test_memory_cue_runtime.py  (+50 more)
wiki/: README.md  bourbon-memory-retrieval-design-discussion.md  bourbon-memory-v3-design-and-evaluation.md  bourbon-memory-v3-retrieval-cues-design-review.md  claude-code-built-in-tools.md  claude-code-human-approval-design.md  claude-code-llm-centric-critique-community-and-source.md  claude-code-llm-centric-design-philosophy.md  claude-code-memory-architecture.md  claude-code-prompt-architecture.md  claude-code-skill-architecture.md  claude-code-skill-flow.md  (+21 more)
(+327 files in other folders)
